Add support for saving/retrieving saved logs insights queries (#2063)

--- a/resources/resources/software/aws/toolkits/resources/localized_messages.properties
+++ b/resources/resources/software/aws/toolkits/resources/localized_messages.properties
@@ -202,6 +202,7 @@ cloudwatch.logs.export=Export Log Stream
 cloudwatch.logs.failed_to_load_more=Failed to load more
 cloudwatch.logs.failed_to_load_stream=Failed to load log stream {0}
 cloudwatch.logs.failed_to_load_streams=Failed to load log streams for log group {0}
+cloudwatch.logs.failed_to_save_query=Failed to save query
 cloudwatch.logs.filter_loggroup=Filter streams
 cloudwatch.logs.filter_logs=Filter events
 cloudwatch.logs.filtered_log_stream_title=Filtered Stream: {0} from {1} to {2}
@@ -229,12 +230,13 @@ cloudwatch.logs.no_term_entered=Search Term must be specified
 cloudwatch.logs.open=View Log Streams
 cloudwatch.logs.open_in_editor=Open in Editor
 cloudwatch.logs.open_in_editor_failed=Open in editor failed
+cloudwatch.logs.open_query_editor=Open Query Editor
 cloudwatch.logs.opening_in_editor=Opening Stream {0} in editor
-cloudwatch.logs.query=Open Query Editor
+cloudwatch.logs.query=Query
 cloudwatch.logs.query.form.ok_Button=Execute
 cloudwatch.logs.query_editor_title=Query Log Groups
-cloudwatch.logs.query_name=Query name is missing
-cloudwatch.logs.query_not_saved=Query could not be saved. Try saving with a different name.
+cloudwatch.logs.query_name=Query Name
+cloudwatch.logs.query_name_missing=Query name is missing
 cloudwatch.logs.query_result=Query Results
 cloudwatch.logs.query_result_completion_status=Result
 cloudwatch.logs.query_result_completion_successful=Query Execution Completed
@@ -248,6 +250,7 @@ cloudwatch.logs.saved_query_status=Saved Query Status
 cloudwatch.logs.saving_to_disk=Saving Stream {0} to disk
 cloudwatch.logs.saving_to_disk_failed=Saving Stream {0} failed
 cloudwatch.logs.saving_to_disk_succeeded=Finished saving Log Stream {0} to {1}
+cloudwatch.logs.select_saved_query_dialog_name=Select Saved Query
 cloudwatch.logs.show_logs_around=Show Logs Around
 cloudwatch.logs.stream_save_to_file=Save {0} to a file
 cloudwatch.logs.stream_too_big=Stream is Too Large
