--- a/package.json
+++ b/package.json
@@ -1207,7 +1207,6 @@
         ]
     },
     "scripts": {
-        "installSSMTemp": "cd aws-ssm-document-language-service && npm install && cd ..",
         "vscode:prepublish": "npm run clean && npm run lint && webpack --mode production && npm run buildScripts",
         "bundleDeps": "node ./build-scripts/bundleDeps.js",
         "clean": "node ./build-scripts/clean.js dist",
@@ -1219,7 +1218,7 @@
         "compile": "webpack --mode development && npm run buildScripts",
         "recompile": "npm run clean && npm run compile",
         "watch": "npm run buildScripts && tsc -watch -p ./",
-        "postinstall": "npm run installSSMTemp && ts-node ./build-scripts/generateServiceClient.ts && npm run generateTelemetry && npm run generateConfigurationAttributes",
+        "postinstall": "ts-node ./build-scripts/generateServiceClient.ts && npm run generateTelemetry && npm run generateConfigurationAttributes",
         "testCompile": "tsc -p ./ && npm run buildScripts",
         "test": "npm run testCompile && ts-node ./test-scripts/test.ts",
         "integrationTest": "npm run testCompile && ts-node ./test-scripts/integrationTest.ts",
@@ -1261,6 +1260,7 @@
         "@typescript-eslint/eslint-plugin-tslint": "^2.27.0",
         "@typescript-eslint/parser": "^2.27.0",
         "circular-dependency-plugin": "^5.2.0",
+        "copy-webpack-plugin": "^6.1.1",
         "decache": "^4.4.0",
         "eslint": "^6.8.0",
         "eslint-config-prettier": "^6.10.1",
@@ -1282,7 +1282,7 @@
         "remap-istanbul": "^0.12.0",
         "sinon": "^7.4.2",
         "source-map-support": "^0.5.19",
-        "terser-webpack-plugin": "^4.1.0",
+        "terser-webpack-plugin": "^4.2.2",
         "ts-loader": "^6.2.0",
         "ts-mockito": "^2.5.0",
         "ts-node": "^8.5.2",
@@ -1298,7 +1298,7 @@
         "amazon-states-language-service": "^1.4.1",
         "async-lock": "^1.1.3",
         "aws-sdk": "^2.581.0",
-        "aws-ssm-document-language-service": "file:aws-ssm-document-language-service",
+        "aws-ssm-document-language-service": "^0.1.0",
         "bytes": "^3.1.0",
         "cloudformation-schema-js-yaml": "^1.0.1",
         "cross-spawn": "^6.0.5",
