CI: report coverage in github action
This allows us to eliminate travis CI (4 redundant CI jobs).

followup #1110

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,3 +32,6 @@ jobs:
               uses: GabrielBB/xvfb-action@v1.2
               with:
                   run: npm test
+            - name: Code coverage
+              if: ${{ github.repository == 'aws/aws-toolkit-vscode' && ( github.ref == 'master' || github.event_name == 'pull_request' ) }}
+              run: bash <(curl -s https://codecov.io/bash) -s .coverage
