--- a/package.json
+++ b/package.json
@@ -62,7 +62,11 @@
         "onLanguage:ssm-yaml",
         "onCommand:aws.ssmDocument.createLocalDocument",
         "onCommand:aws.ssmDocument.openLocalDocument",
+        "onCommand:aws.ssmDocument.openLocalDocumentJson",
+        "onCommand:aws.ssmDocument.openLocalDocumentYaml",
+        "onCommand:aws.ssmDocument.deleteDocument",
         "onCommand:aws.ssmDocument.publishDocument",
+        "onCommand:aws.ssmDocument.updateDocumentVersion",
         "onLanguage:javascript",
         "onLanguage:python",
         "onLanguage:csharp",
@@ -491,6 +495,22 @@
                     "when": "false"
                 },
                 {
+                    "command": "aws.ssmDocument.openLocalDocumentJson",
+                    "when": "false"
+                },
+                {
+                    "command": "aws.ssmDocument.openLocalDocumentYaml",
+                    "when": "false"
+                },
+                {
+                    "command": "aws.ssmDocument.deleteDocument",
+                    "when": "false"
+                },
+                {
+                    "command": "aws.ssmDocument.updateDocumentVersion",
+                    "when": "false"
+                },
+                {
                     "command": "aws.copyLogStreamName",
                     "when": "resourceScheme == awsCloudWatchLogs"
                 },
@@ -544,6 +564,11 @@
                 {
                     "command": "aws.saveCurrentLogStreamContent",
                     "when": "resourceScheme == awsCloudWatchLogs",
+                    "group": "navigation"
+                },
+                {
+                    "command": "aws.ssmDocument.publishDocument",
+                    "when": "editorLangId =~ /^(ssm-yaml|ssm-json)$/",
                     "group": "navigation"
                 }
             ],
@@ -650,6 +675,11 @@
                 {
                     "command": "aws.s3.createFolder",
                     "when": "view == aws.explorer && viewItem =~ /^(awsS3BucketNode|awsS3FolderNode)$/",
+                    "group": "inline@1"
+                },
+                {
+                    "command": "aws.ssmDocument.openLocalDocument",
+                    "when": "view == aws.explorer && viewItem =~ /^(awsDocumentItemNode|awsDocumentItemNodeWriteable)$/",
                     "group": "inline@1"
                 },
                 {
@@ -778,9 +808,24 @@
                     "when": "view == aws.explorer && viewItem == awsCloudWatchLogNode"
                 },
                 {
-                    "command": "aws.ssmDocument.openLocalDocument",
+                    "command": "aws.ssmDocument.openLocalDocumentYaml",
                     "group": "0@1",
-                    "when": "view == aws.explorer && viewItem == awsDocumentItemNode"
+                    "when": "view == aws.explorer && viewItem =~ /^(awsDocumentItemNode|awsDocumentItemNodeWriteable)$/"
+                },
+                {
+                    "command": "aws.ssmDocument.openLocalDocumentJson",
+                    "group": "0@2",
+                    "when": "view == aws.explorer && viewItem =~ /^(awsDocumentItemNode|awsDocumentItemNodeWriteable)$/"
+                },
+                {
+                    "command": "aws.ssmDocument.updateDocumentVersion",
+                    "group": "2@1",
+                    "when": "view == aws.explorer && viewItem == awsDocumentItemNodeWriteable"
+                },
+                {
+                    "command": "aws.ssmDocument.deleteDocument",
+                    "group": "2@2",
+                    "when": "view == aws.explorer && viewItem == awsDocumentItemNodeWriteable"
                 }
             ]
         },
@@ -1043,11 +1088,33 @@
             {
                 "command": "aws.ssmDocument.openLocalDocument",
                 "title": "%AWS.command.ssmDocument.openLocalDocument%",
+                "category": "AWS",
+                "icon": "$(cloud-download)"
+            },
+            {
+                "command": "aws.ssmDocument.openLocalDocumentJson",
+                "title": "%AWS.command.ssmDocument.openLocalDocumentJson%",
+                "category": "AWS"
+            },
+            {
+                "command": "aws.ssmDocument.openLocalDocumentYaml",
+                "title": "%AWS.command.ssmDocument.openLocalDocumentYaml%",
+                "category": "AWS"
+            },
+            {
+                "command": "aws.ssmDocument.deleteDocument",
+                "title": "%AWS.command.ssmDocument.deleteDocument%",
                 "category": "AWS"
             },
             {
                 "command": "aws.ssmDocument.publishDocument",
                 "title": "%AWS.command.ssmDocument.publishDocument%",
+                "category": "AWS",
+                "icon": "$(cloud-upload)"
+            },
+            {
+                "command": "aws.ssmDocument.updateDocumentVersion",
+                "title": "%AWS.command.ssmDocument.updateDocumentVersion%",
                 "category": "AWS"
             },
             {
@@ -1090,7 +1157,7 @@
                     ".ssm.json"
                 ],
                 "aliases": [
-                    "Amazon SSM Document Language (JSON)"
+                    "AWS Systems Manager Document (JSON)"
                 ]
             },
             {
@@ -1100,7 +1167,7 @@
                     ".ssm.yml"
                 ],
                 "aliases": [
-                    "Amazon SSM Document Language (YAML)"
+                    "AWS Systems Manager Document (YAML)"
                 ]
             }
         ],
@@ -1140,7 +1207,6 @@
         ]
     },
     "scripts": {
-        "installSSMTemp": "cd aws-ssm-document-language-service && npm install && cd ..",
         "vscode:prepublish": "npm run clean && npm run lint && webpack --mode production && npm run buildScripts",
         "bundleDeps": "node ./build-scripts/bundleDeps.js",
         "clean": "node ./build-scripts/clean.js dist",
@@ -1152,7 +1218,7 @@
         "compile": "webpack --mode development && npm run buildScripts",
         "recompile": "npm run clean && npm run compile",
         "watch": "npm run buildScripts && tsc -watch -p ./",
-        "postinstall": "npm run installSSMTemp && ts-node ./build-scripts/generateServiceClient.ts && npm run generateTelemetry && npm run generateConfigurationAttributes",
+        "postinstall": "ts-node ./build-scripts/generateServiceClient.ts && npm run generateTelemetry && npm run generateConfigurationAttributes",
         "testCompile": "tsc -p ./ && npm run buildScripts",
         "test": "npm run testCompile && ts-node ./test-scripts/test.ts",
         "integrationTest": "npm run testCompile && ts-node ./test-scripts/integrationTest.ts",
@@ -1194,6 +1260,7 @@
         "@typescript-eslint/eslint-plugin-tslint": "^2.27.0",
         "@typescript-eslint/parser": "^2.27.0",
         "circular-dependency-plugin": "^5.2.0",
+        "copy-webpack-plugin": "^6.1.1",
         "decache": "^4.4.0",
         "eslint": "^6.8.0",
         "eslint-config-prettier": "^6.10.1",
@@ -1215,7 +1282,7 @@
         "remap-istanbul": "^0.12.0",
         "sinon": "^7.4.2",
         "source-map-support": "^0.5.19",
-        "terser-webpack-plugin": "^4.1.0",
+        "terser-webpack-plugin": "^4.2.2",
         "ts-loader": "^6.2.0",
         "ts-mockito": "^2.5.0",
         "ts-node": "^8.5.2",
@@ -1231,7 +1298,7 @@
         "amazon-states-language-service": "^1.4.1",
         "async-lock": "^1.1.3",
         "aws-sdk": "^2.581.0",
-        "aws-ssm-document-language-service": "file:aws-ssm-document-language-service",
+        "aws-ssm-document-language-service": "^0.1.0",
         "bytes": "^3.1.0",
         "cloudformation-schema-js-yaml": "^1.0.1",
         "cross-spawn": "^6.0.5",
