Fix packaging for integration tests run
Copy the aws-ssm-language-service artifacts in the "buildScripts" phase.
This ensures that SSM language service is available during integration tests run as well as in the final package.

--- a/package.json
+++ b/package.json
@@ -1214,7 +1214,8 @@
         "reset": "node ./build-scripts/clean.js dist node_modules && npm install",
         "copyNonCodeFiles": "node ./build-scripts/copyNonCodeFiles.js",
         "copyExtensionMain": "node ./build-scripts/copyExtensionMain.js",
-        "buildScripts": "npm run bundleDeps && npm run copyExtensionMain && npm run copyNonCodeFiles && npm run generateNonCodeFiles",
+        "copySsmLanguageService": "node ./build-scripts/copySsmLanguageService.js",
+        "buildScripts": "npm run bundleDeps && npm run copyExtensionMain && npm run copySsmLanguageService && npm run copyNonCodeFiles && npm run generateNonCodeFiles",
         "compile": "webpack --mode development && npm run buildScripts",
         "recompile": "npm run clean && npm run compile",
         "watch": "npm run buildScripts && tsc -watch -p ./",
@@ -1260,7 +1261,6 @@
         "@typescript-eslint/eslint-plugin-tslint": "^2.27.0",
         "@typescript-eslint/parser": "^2.27.0",
         "circular-dependency-plugin": "^5.2.0",
-        "copy-webpack-plugin": "^6.1.1",
         "decache": "^4.4.0",
         "eslint": "^6.8.0",
         "eslint-config-prettier": "^6.10.1",
