--- a/package.json
+++ b/package.json
@@ -642,11 +642,11 @@
                 },
                 {
                     "command": "aws.copyLogStreamName",
-                    "when": "resourceScheme == awsCloudWatchLogs && !aws-toolkit-vscode:IsCloud9"
+                    "when": "resourceScheme == awsCloudWatchLogs && !isCloud9"
                 },
                 {
                     "command": "aws.saveCurrentLogStreamContent",
-                    "when": "resourceScheme == awsCloudWatchLogs && !aws-toolkit-vscode:IsCloud9"
+                    "when": "resourceScheme == awsCloudWatchLogs && !isCloud9"
                 },
                 {
                     "command": "aws.cloudWatchLogs.viewLogStream",
@@ -686,22 +686,22 @@
                 },
                 {
                     "command": "aws.stepfunctions.createStateMachineFromTemplate",
-                    "when": "!aws-toolkit-vscode:IsCloud9"
+                    "when": "!isCloud9"
                 },
                 {
                     "command": "aws.stepfunctions.publishStateMachine",
-                    "when": "!aws-toolkit-vscode:IsCloud9"
+                    "when": "!isCloud9"
                 }
             ],
             "editor/title": [
                 {
                     "command": "aws.previewStateMachine",
-                    "when": "editorLangId == asl && !aws-toolkit-vscode:IsCloud9",
+                    "when": "editorLangId == asl && !isCloud9",
                     "group": "navigation"
                 },
                 {
                     "command": "aws.saveCurrentLogStreamContent",
-                    "when": "resourceScheme == awsCloudWatchLogs && !aws-toolkit-vscode:IsCloud9",
+                    "when": "resourceScheme == awsCloudWatchLogs && !isCloud9",
                     "group": "navigation"
                 },
                 {
@@ -713,7 +713,7 @@
             "editor/title/context": [
                 {
                     "command": "aws.copyLogStreamName",
-                    "when": "resourceScheme == awsCloudWatchLogs && !aws-toolkit-vscode:IsCloud9",
+                    "when": "resourceScheme == awsCloudWatchLogs && !isCloud9",
                     "group": "1_cutcopypaste@1"
                 }
             ],
@@ -807,17 +807,17 @@
                 },
                 {
                     "command": "aws.s3.downloadFileAs",
-                    "when": "view == aws.explorer && viewItem == awsS3FileNode && !aws-toolkit-vscode:IsCloud9",
+                    "when": "view == aws.explorer && viewItem == awsS3FileNode && !isCloud9",
                     "group": "inline@1"
                 },
                 {
                     "command": "aws.s3.createBucket",
-                    "when": "view == aws.explorer && viewItem == awsS3Node && !aws-toolkit-vscode:IsCloud9",
+                    "when": "view == aws.explorer && viewItem == awsS3Node && !isCloud9",
                     "group": "inline@1"
                 },
                 {
                     "command": "aws.s3.createFolder",
-                    "when": "view == aws.explorer && viewItem =~ /^(awsS3BucketNode|awsS3FolderNode)$/ && !aws-toolkit-vscode:IsCloud9",
+                    "when": "view == aws.explorer && viewItem =~ /^(awsS3BucketNode|awsS3FolderNode)$/ && !isCloud9",
                     "group": "inline@1"
                 },
                 {
@@ -827,7 +827,7 @@
                 },
                 {
                     "command": "aws.s3.uploadFile",
-                    "when": "view == aws.explorer && viewItem =~ /^(awsS3BucketNode|awsS3FolderNode)$/ && !aws-toolkit-vscode:IsCloud9",
+                    "when": "view == aws.explorer && viewItem =~ /^(awsS3BucketNode|awsS3FolderNode)$/ && !isCloud9",
                     "group": "inline@2"
                 },
                 {
@@ -857,52 +857,52 @@
                 },
                 {
                     "command": "aws.searchSchema",
-                    "when": "view == aws.explorer && viewItem == awsSchemasNode && !aws-toolkit-vscode:IsCloud9",
+                    "when": "view == aws.explorer && viewItem == awsSchemasNode && !isCloud9",
                     "group": "0@1"
                 },
                 {
                     "command": "aws.searchSchemaPerRegistry",
-                    "when": "view == aws.explorer && viewItem == awsRegistryItemNode && !aws-toolkit-vscode:IsCloud9",
+                    "when": "view == aws.explorer && viewItem == awsRegistryItemNode && !isCloud9",
                     "group": "0@1"
                 },
                 {
                     "command": "aws.viewSchemaItem",
-                    "when": "view == aws.explorer && viewItem == awsSchemaItemNode && !aws-toolkit-vscode:IsCloud9",
+                    "when": "view == aws.explorer && viewItem == awsSchemaItemNode && !isCloud9",
                     "group": "0@1"
                 },
                 {
                     "command": "aws.downloadStateMachineDefinition",
-                    "when": "view == aws.explorer && viewItem == awsStateMachineNode && !aws-toolkit-vscode:IsCloud9",
+                    "when": "view == aws.explorer && viewItem == awsStateMachineNode && !isCloud9",
                     "group": "0@1"
                 },
                 {
                     "command": "aws.executeStateMachine",
-                    "when": "view == aws.explorer && viewItem == awsStateMachineNode && !aws-toolkit-vscode:IsCloud9",
+                    "when": "view == aws.explorer && viewItem == awsStateMachineNode && !isCloud9",
                     "group": "0@2"
                 },
                 {
                     "command": "aws.s3.createBucket",
-                    "when": "view == aws.explorer && viewItem == awsS3Node && !aws-toolkit-vscode:IsCloud9",
+                    "when": "view == aws.explorer && viewItem == awsS3Node && !isCloud9",
                     "group": "0@1"
                 },
                 {
                     "command": "aws.s3.downloadFileAs",
-                    "when": "view == aws.explorer && viewItem == awsS3FileNode && !aws-toolkit-vscode:IsCloud9",
+                    "when": "view == aws.explorer && viewItem == awsS3FileNode && !isCloud9",
                     "group": "0@1"
                 },
                 {
                     "command": "aws.s3.uploadFile",
-                    "when": "view == aws.explorer && viewItem =~ /^(awsS3BucketNode|awsS3FolderNode)$/ && !aws-toolkit-vscode:IsCloud9",
+                    "when": "view == aws.explorer && viewItem =~ /^(awsS3BucketNode|awsS3FolderNode)$/ && !isCloud9",
                     "group": "0@1"
                 },
                 {
                     "command": "aws.s3.uploadFileToParent",
-                    "when": "view == aws.explorer && viewItem == awsS3FileNode && !aws-toolkit-vscode:IsCloud9",
+                    "when": "view == aws.explorer && viewItem == awsS3FileNode && !isCloud9",
                     "group": "1@1"
                 },
                 {
                     "command": "aws.s3.createFolder",
-                    "when": "view == aws.explorer && viewItem =~ /^(awsS3BucketNode|awsS3FolderNode)$/ && !aws-toolkit-vscode:IsCloud9",
+                    "when": "view == aws.explorer && viewItem =~ /^(awsS3BucketNode|awsS3FolderNode)$/ && !isCloud9",
                     "group": "1@1"
                 },
                 {
@@ -922,22 +922,22 @@
                 },
                 {
                     "command": "aws.s3.copyPath",
-                    "when": "view == aws.explorer && viewItem =~ /^(awsS3FolderNode|awsS3FileNode)$/ && !aws-toolkit-vscode:IsCloud9",
+                    "when": "view == aws.explorer && viewItem =~ /^(awsS3FolderNode|awsS3FileNode)$/ && !isCloud9",
                     "group": "2@3"
                 },
                 {
                     "command": "aws.s3.deleteBucket",
-                    "when": "view == aws.explorer && viewItem == awsS3BucketNode && !aws-toolkit-vscode:IsCloud9",
+                    "when": "view == aws.explorer && viewItem == awsS3BucketNode && !isCloud9",
                     "group": "3@1"
                 },
                 {
                     "command": "aws.s3.deleteFile",
-                    "when": "view == aws.explorer && viewItem == awsS3FileNode && !aws-toolkit-vscode:IsCloud9",
+                    "when": "view == aws.explorer && viewItem == awsS3FileNode && !isCloud9",
                     "group": "3@1"
                 },
                 {
                     "command": "aws.downloadSchemaItemCode",
-                    "when": "view == aws.explorer && viewItem == awsSchemaItemNode && !aws-toolkit-vscode:IsCloud9",
+                    "when": "view == aws.explorer && viewItem == awsSchemaItemNode && !isCloud9",
                     "group": "1@1"
                 },
                 {
@@ -953,7 +953,7 @@
                 {
                     "command": "aws.cloudWatchLogs.viewLogStream",
                     "group": "0@1",
-                    "when": "view == aws.explorer && viewItem == awsCloudWatchLogNode && !aws-toolkit-vscode:IsCloud9"
+                    "when": "view == aws.explorer && viewItem == awsCloudWatchLogNode && !isCloud9"
                 },
                 {
                     "command": "aws.ssmDocument.openLocalDocumentYaml",
@@ -1334,7 +1334,7 @@
                 "command": "aws.previewStateMachine",
                 "key": "ctrl+shift+v",
                 "mac": "cmd+shift+v",
-                "when": "editorTextFocus && editorLangId == asl && !aws-toolkit-vscode:IsCloud9"
+                "when": "editorTextFocus && editorLangId == asl && !isCloud9"
             }
         ],
         "grammars": [
