build: remove quickstart "template" approach
Instead, just have 2 separate docs. It is over-complicated to do ad-hoc
generator for these docs, because we need to remove some sections for
cloud9, have different images, etc.

It is easier for humans to update the docs by just updating separate
docs. The images are the hardest part anyway...

--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,8 @@ node_modules
 .idea
 telemetryCache
 quickStart*.html
-README.cloud9.md
-extension-readme.md
+README.quickstart.cloud9.md
+README.quickstart.vscode.md
 .gitcommit
 media/libs/
 package.json.bk
