Removing quick start from c9 (#131)

--- a/package.json
+++ b/package.json
@@ -684,6 +684,10 @@
                 {
                     "command": "aws.stepfunctions.publishStateMachine",
                     "when": "!isCloud9"
+                },
+                {
+                    "command": "aws.quickStart",
+                    "when": "!isCloud9"
                 }
             ],
             "editor/title": [
@@ -748,7 +752,7 @@
                 },
                 {
                     "command": "aws.quickStart",
-                    "when": "view == aws.explorer",
+                    "when": "view == aws.explorer && !isCloud9",
                     "group": "y_quickStart@1"
                 },
                 {
