Deploy SAM Application moved to context menus

--- a/package.json
+++ b/package.json
@@ -822,8 +822,8 @@
                 },
                 {
                     "command": "aws.deploySamApplication",
-                    "when": "view == aws.explorer && viewItem == awsRegionNode",
-                    "group": "inline@1"
+                    "when": "view == aws.explorer && viewItem == awsLambdaNode || viewItem == awsRegionNode || viewItem == awsCloudFormationRootNode",
+                    "group": "1@1"
                 },
                 {
                     "command": "aws.invokeLambda",
@@ -1100,8 +1100,7 @@
             {
                 "command": "aws.deploySamApplication",
                 "title": "%AWS.command.deploySamApplication%",
-                "category": "AWS",
-                "icon": "$(cloud-upload)"
+                "category": "AWS"
             },
             {
                 "command": "aws.submitFeedback",
