--- a/resources/resources/software/aws/toolkits/resources/localized_messages.properties
+++ b/resources/resources/software/aws/toolkits/resources/localized_messages.properties
@@ -401,6 +401,7 @@ feedback.validation.no_sentiment=Please select how you're feeling.
 general.close_button=Close
 general.configure_button=Configure
 general.create_button=Create
+general.in_progress_button=In progress
 general.file_not_found=File not found: "{0}"
 general.message=Message
 general.refresh=Refresh
@@ -409,6 +410,7 @@ general.time=Time
 general.time.five_minutes=Five Minutes
 general.time.one_minute=One Minute
 general.time.ten_minutes=Ten Minutes
+general.update_button=Close
 general.unknown_error=Unknown error
 iam.create.role.in_progress=Creating...
 iam.create.role.missing.role.name=Role name is required.
