--- a/package.json
+++ b/package.json
@@ -155,6 +155,12 @@
                     "type": "number",
                     "default": 5000,
                     "description": "%AWS.ssmDocument.ssm.maxItemsComputed.desc%"
+                },
+                "aws.cloudWatchLogs.limit": {
+                    "type": "number",
+                    "default": 1000,
+                    "description": "%aws.cloudWatchLogs.limit.desc%",
+                    "maximum": 10000
                 }
             }
         },
