Switch from requests to got (#1379)
- Switch from requests to got
- As a follow up later, we need to split up HttpResourceFetcher. It doesn't make sense in it's current form and doesn't report errors for streams (in the one place we use it, we fail later. This is not new as of this commit)

--- a/package.json
+++ b/package.json
@@ -1409,7 +1409,6 @@
         "@types/mocha": "^7.0.2",
         "@types/node": "^10.14.22",
         "@types/readline-sync": "^1.4.3",
-        "@types/request": "^2.47.1",
         "@types/semver": "^5.5.0",
         "@types/sinon": "^7.0.13",
         "@types/tcp-port-used": "^1.0.0",
@@ -1462,6 +1461,7 @@
         "cross-spawn": "^6.0.5",
         "del": "^3.0.0",
         "fs-extra": "^8.1.0",
+        "got": "^11.8.0",
         "handlebars": "^4.7.6",
         "immutable": "^4.0.0-rc.12",
         "js-yaml": "^3.13.1",
@@ -1471,7 +1471,6 @@
         "moment": "^2.24.0",
         "original-fs": "^1.1.0",
         "portfinder": "^1.0.25",
-        "request": "^2.88.0",
         "semver": "^5.6.0",
         "sleep-promise": "^8.0.1",
         "strip-ansi": "^5.2.0",
