--- a/src/testFixtures/workspaceFolder/js-image-sam-app/hello-world/Dockerfile
+++ b/src/testFixtures/workspaceFolder/js-image-sam-app/hello-world/Dockerfile
@@ -1,4 +1,4 @@
-FROM 628053151772.dkr.ecr.sa-east-1.amazonaws.com/awslambda/nodejs12.x-runtime:beta
+FROM public.ecr.aws/lambda/nodejs:12
 
 COPY app.js package.json ./
 
