--- a/package.json
+++ b/package.json
@@ -1407,6 +1407,7 @@
         "@types/mime-types": "^2.1.0",
         "@types/mocha": "^7.0.2",
         "@types/node": "^10.14.22",
+        "@types/request": "^2.47.1",
         "@types/readline-sync": "^1.4.3",
         "@types/semver": "^5.5.0",
         "@types/sinon": "^7.0.13",
@@ -1459,7 +1460,6 @@
         "cloudformation-schema-js-yaml": "^1.0.1",
         "cross-spawn": "^6.0.5",
         "fs-extra": "^9.0.1",
-        "got": "^11.8.0",
         "handlebars": "^4.7.6",
         "immutable": "^4.0.0-rc.12",
         "js-yaml": "^3.13.1",
@@ -1468,6 +1468,7 @@
         "mime-types": "^2.1.27",
         "moment": "^2.29.1",
         "portfinder": "^1.0.25",
+        "request": "^2.88.0",
         "semver": "^5.6.0",
         "sleep-promise": "^8.0.1",
         "strip-ansi": "^5.2.0",
