--- a/.eslintignore
+++ b/.eslintignore
@@ -1,7 +1,5 @@
 node_modules/**
 third-party
 **/*.json
-# TODO turn on below
+src/shared/telemetry/clienttelemetry.d.ts
 **/*.gen.ts
-**/*.d.ts
-test-scripts
