--- a/package.json
+++ b/package.json
@@ -1423,8 +1423,8 @@
         "@types/mime-types": "^2.1.0",
         "@types/mocha": "^7.0.2",
         "@types/node": "^10.14.22",
-        "@types/request": "^2.47.1",
         "@types/readline-sync": "^1.4.3",
+        "@types/request": "^2.47.1",
         "@types/semver": "^5.5.0",
         "@types/sinon": "^7.0.13",
         "@types/tcp-port-used": "^1.0.0",
@@ -1449,7 +1449,7 @@
         "mocha": "^7.1.1",
         "mocha-junit-reporter": "^1.23.3",
         "mocha-multi-reporters": "^1.1.7",
-        "prettier": "^2.1.2",
+        "prettier": "^2.2.0",
         "pretty-quick": "^3.1.0",
         "readline-sync": "^1.4.9",
         "remap-istanbul": "^0.12.0",
@@ -1460,12 +1460,12 @@
         "ts-mockito": "^2.5.0",
         "ts-node": "^9.0.0",
         "tslint": "^6.1.3",
+        "umd-compat-loader": "^2.1.2",
         "vsce": "^1.81.1",
         "vscode-nls-dev": "^3.3.1",
         "vscode-test": "^1.4.0",
         "webpack": "^4.41.2",
-        "webpack-cli": "^3.3.10",
-        "umd-compat-loader": "^2.1.2"
+        "webpack-cli": "^3.3.10"
     },
     "dependencies": {
         "adm-zip": "^0.4.13",
@@ -1485,7 +1485,6 @@
         "mime-types": "^2.1.27",
         "moment": "^2.29.1",
         "portfinder": "^1.0.25",
-        "prettier": "^1.19.1",
         "request": "^2.88.0",
         "semver": "^5.6.0",
         "sleep-promise": "^8.0.1",
